fix color issue on mobile

--- a/src/components/StickyButtons.less
+++ b/src/components/StickyButtons.less
@@ -10,6 +10,8 @@
 }
 
 .lofi-player-information {
+  color: black;
+
   .paragraph {
     font-size: 14px;
     margin: 0;
